@@ -1,4 +1,4 @@
-# This file was generated by Mousse::Maker 0.12 from Mouse 0.81.
+# This file was generated by Mousse::Maker 0.12 from Mouse 0.87.
 #
 # ANY CHANGES MADE HERE WILL BE LOST!
 use strict;
@@ -623,7 +623,7 @@ sub _process_options{
 
 	if ($args->{lazy}) {
 		(exists $args->{default} || defined $args->{builder})
-			|| $class->throw_error("You cannot have lazy attribute ($name) without specifying a default value for it");
+			|| $class->throw_error("You cannot have a lazy attribute ($name) without specifying a default value for it");
 	}
 
 	return;
@@ -647,7 +647,6 @@ sub _identity  { Scalar::Util::refaddr($_[0]) } # overload 0+
 
 sub type_parameter           { $_[0]->{type_parameter} }
 sub _compiled_type_constraint{ $_[0]->{compiled_type_constraint} }
-sub _compiled_type_coercion  { $_[0]->{_compiled_type_coercion}  }
 
 sub __is_parameterized { exists $_[0]->{type_parameter} }
 sub has_coercion {       exists $_[0]->{_compiled_type_coercion} }
@@ -892,7 +891,7 @@ sub build_import_methods{
 	$args{EXPORTS}    = \%exports;
 	$args{REMOVABLES} = \@removables;
 
-	$args{groups}{all}     ||= \@all;
+	$args{groups}{all} ||= \@all;
 
 	if(my $default_list = $args{groups}{default}){
 		my %default;
@@ -913,7 +912,6 @@ sub build_import_methods{
 
 	return (\&do_import, \&do_unimport);
 }
-
 
 # the entity of general import()
 sub do_import {
@@ -961,11 +959,11 @@ sub do_import {
 
 		if(@traits){
 			my $type = (split /::/, ref $meta)[-1]; # e.g. "Class" for "My::Meta::Class"
-			@traits =
-				map{
-					ref($_) ? $_
-							: Mousse::Util::resolve_metaclass_alias($type => $_, trait => 1)
-				} @traits;
+			@traits = map{
+			  ref($_)
+				? $_
+				: Mousse::Util::resolve_metaclass_alias($type => $_, trait => 1)
+			} @traits;
 
 			require Mousse::Util::MetaRole;
 			Mousse::Util::MetaRole::apply_metaroles(
@@ -1089,7 +1087,7 @@ BEGIN{
 		},
 	);
 
-	our $VERSION = '0.81';
+	our $VERSION = '0.87';
 
 	my $xs = !(defined(&is_valid_class_name) || $ENV{MOUSE_PUREPERL} || $ENV{PERL_ONLY});
 
@@ -1430,31 +1428,54 @@ sub new {
 
 	$args{name} = '__ANON__' if !defined $args{name};
 
-	if(defined $args{parent}) {
+	my $type_parameter;
+	if(defined $args{parent}) { # subtyping
 		%args = (%{$args{parent}}, %args);
+
 		# a child type must not inherit 'compiled_type_constraint'
 		# and 'hand_optimized_type_constraint' from the parent
-		delete $args{compiled_type_constraint};
-		delete $args{hand_optimized_type_constraint};
+		delete $args{compiled_type_constraint};       # don't inherit it
+		delete $args{hand_optimized_type_constraint}; # don't inherit it
+
+		$type_parameter = $args{type_parameter};
 		if(defined(my $parent_tp = $args{parent}{type_parameter})) {
-			delete $args{type_parameter} if $parent_tp == $args{type_parameter};
+			if($parent_tp != $type_parameter) {
+				$type_parameter->is_a_type_of($parent_tp)
+					or $class->throw_error(
+						"$type_parameter is not a subtype of $parent_tp",
+					);
+			}
+			else {
+				$type_parameter = undef;
+			}
 		}
 	}
 
 	my $check;
 
-	if($check = delete $args{optimized}) {
+	if($check = delete $args{optimized}) { # likely to be builtins
 		$args{hand_optimized_type_constraint} = $check;
 		$args{compiled_type_constraint}       = $check;
 	}
-	elsif(my $param = $args{type_parameter}) {
+	elsif(defined $type_parameter) { # parameterizing
 		my $generator = $args{constraint_generator}
-			|| $class->throw_error("The $args{name} constraint cannot be used,"
-				. " because $param doesn't subtype from a parameterizable type");
-		# it must be 'constraint'
-		$check = $args{constraint} = $generator->($param);
+			|| $class->throw_error(
+				  "The $args{name} constraint cannot be used,"
+				. " because $type_parameter doesn't subtype"
+				. " from a parameterizable type");
+
+		my $parameterized_check = $generator->($type_parameter);
+		if(defined(my $my_check = $args{constraint})) {
+			$check = sub {
+				return $parameterized_check->($_) && $my_check->($_);
+			};
+		}
+		else {
+			$check = $parameterized_check;
+		}
+		$args{constraint} = $check;
 	}
-	else {
+	else { # common cases
 		$check = $args{constraint};
 	}
 
@@ -1467,9 +1488,16 @@ sub new {
 	$self->compile_type_constraint()
 		if !$args{hand_optimized_type_constraint};
 
-	if($args{type_constraints}) {
-		$self->_compile_union_type_coercion();
+	if($args{type_constraints}) { # union types
+		foreach my $type(@{$self->{type_constraints}}){
+			if($type->has_coercion){
+				# set undef for has_coercion()
+				$self->{_compiled_type_coercion} = undef;
+				last;
+			}
+		}
 	}
+
 	return $self;
 }
 
@@ -1502,8 +1530,8 @@ sub _add_type_coercions { # ($self, @pairs)
 			"Cannot add additional type coercions to Union types '$self'");
 	}
 
-	my $coercions = ($self->{coercion_map} ||= []);
-	my %has       = map{ $_->[0] => undef } @{$coercions};
+	my $coercion_map = ($self->{coercion_map} ||= []);
+	my %has          = map{ $_->[0]->name => undef } @{$coercion_map};
 
 	for(my $i = 0; $i < @_; $i++){
 		my $from   = $_[  $i];
@@ -1517,59 +1545,65 @@ sub _add_type_coercions { # ($self, @pairs)
 			or $self->throw_error(
 				"Could not find the type constraint ($from) to coerce from");
 
-		push @{$coercions}, [ $type => $action ];
+		push @{$coercion_map}, [ $type => $action ];
 	}
 
-	$self->_compile_type_coercion();
+	$self->{_compiled_type_coercion} = undef;
 	return;
 }
 
-sub _compile_type_coercion {
+sub _compiled_type_coercion {
 	my($self) = @_;
 
-	my @coercions = @{$self->{coercion_map}};
+	my $coercion = $self->{_compiled_type_coercion};
+	return $coercion if defined $coercion;
 
-	$self->{_compiled_type_coercion} = sub {
-	   my($thing) = @_;
-	   foreach my $pair (@coercions) {
-			#my ($constraint, $converter) = @$pair;
-			if ($pair->[0]->check($thing)) {
-			  local $_ = $thing;
-			  return $pair->[1]->($thing);
-			}
-	   }
-	   return $thing;
-	};
-	return;
-}
-
-sub _compile_union_type_coercion {
-	my($self) = @_;
-
-	my @coercions;
-	foreach my $type(@{$self->{type_constraints}}){
-		if($type->has_coercion){
-			push @coercions, $type;
+	if(!$self->{type_constraints}) {
+		my @coercions;
+		foreach my $pair(@{$self->{coercion_map}}) {
+			push @coercions,
+				[ $pair->[0]->_compiled_type_constraint, $pair->[1] ];
 		}
-	}
-	if(@coercions){
-		$self->{_compiled_type_coercion} = sub {
-			my($thing) = @_;
-			foreach my $type(@coercions){
-				my $value = $type->coerce($thing);
-				return $value if $self->check($value);
-			}
-			return $thing;
+
+		$coercion = sub {
+		   my($thing) = @_;
+		   foreach my $pair (@coercions) {
+				#my ($constraint, $converter) = @$pair;
+				if ($pair->[0]->($thing)) {
+				  local $_ = $thing;
+				  return $pair->[1]->($thing);
+				}
+		   }
+		   return $thing;
 		};
 	}
-	return;
+	else { # for union type
+		my @coercions;
+		foreach my $type(@{$self->{type_constraints}}){
+			if($type->has_coercion){
+				push @coercions, $type;
+			}
+		}
+		if(@coercions){
+			$coercion = sub {
+				my($thing) = @_;
+				foreach my $type(@coercions){
+					my $value = $type->coerce($thing);
+					return $value if $self->check($value);
+				}
+				return $thing;
+			};
+		}
+	}
+
+	return( $self->{_compiled_type_coercion} = $coercion );
 }
 
 sub coerce {
 	my $self = shift;
 	return $_[0] if $self->check(@_);
 
-	my $coercion = $self->{_compiled_type_coercion}
+	my $coercion = $self->_compiled_type_coercion
 		or $self->throw_error("Cannot coerce without a type coercion");
 	return  $coercion->(@_);
 }
@@ -1640,14 +1674,17 @@ sub assert_valid {
 	return 1;
 }
 
-sub _as_string { $_[0]->name                  } # overload ""
-sub _identity;                                  # overload 0+
+# overloading stuff
+
+sub _as_string { $_[0]->name } # overload ""
+sub _identity;                 # overload 0+
 
 sub _unite { # overload infix:<|>
 	my($lhs, $rhs) = @_;
 	require Mousse::Util::TypeConstraints;
-	return Mousse::Util::TypeConstraints::find_or_parse_type_constraint(
-	   " $lhs | $rhs",
+	return Mousse::Util::TypeConstraints::_find_or_create_union_type(
+		$lhs,
+		Mousse::Util::TypeConstraints::find_or_create_isa_type_constraint($rhs),
 	);
 }
 
@@ -1840,7 +1877,7 @@ sub subtype {
 sub coerce { # coerce $type, from $from, via { ... }, ...
 	my $type_name = shift;
 	my $type = find_type_constraint($type_name)
-		or Carp::croak("Cannot find type '$type_name', perhaps you forgot to load it.");
+		or Carp::croak("Cannot find type '$type_name', perhaps you forgot to load it");
 
 	$type->_add_type_coercions(@_);
 	return;
@@ -1944,8 +1981,9 @@ sub _find_or_create_parameterized_type{
 }
 
 sub _find_or_create_union_type{
-	return if grep{ not defined } @_;
-	my @types = sort map{ $_->{type_constraints} ? @{$_->{type_constraints}} : $_ } @_;
+	return if grep{ not defined } @_; # all things must be defined
+	my @types = sort
+		map{ $_->{type_constraints} ? @{$_->{type_constraints}} : $_ } @_;
 
 	my $name = join '|', @types;
 
@@ -2037,39 +2075,43 @@ sub register_type_constraint {
 	my($constraint) = @_;
 	Carp::croak("No type supplied / type is not a valid type constraint")
 		unless Mousse::Util::is_a_type_constraint($constraint);
-	my $name = $constraint->name;
-	Carp::croak("Can't register an unnamed type constraint")
-		unless defined $name;
-	return $TYPE{$name} = $constraint;
+	return $TYPE{$constraint->name} = $constraint;
 }
 
 sub find_or_parse_type_constraint {
 	my($spec) = @_;
 	return $spec if Mousse::Util::is_a_type_constraint($spec) or not defined $spec;
 
-	$spec =~ s/\s+//g;
-	return $TYPE{$spec} || do{
-		my $context = {
-			spec => $spec,
-			orig => $spec,
-		};
-		my $type = _parse_type($context);
+	$spec =~ tr/ \t\r\n//d;
 
-		if($context->{spec}){
-			Carp::croak("Syntax error: extra elements '$context->{spec}' in '$context->{orig}'");
-		}
-		$type;
-	};
+	my $tc = $TYPE{$spec};
+	if(defined $tc) {
+		return $tc;
+	}
+
+	my %context = (
+		spec => $spec,
+		orig => $spec,
+	);
+	$tc = _parse_type(\%context);
+
+	if($context{spec}){
+		Carp::croak("Syntax error: extra elements '$context{spec}' in '$context{orig}'");
+	}
+
+	return $TYPE{$spec} = $tc;
 }
 
 sub find_or_create_does_type_constraint{
 	# XXX: Moose does not register a new role_type, but Mousse does.
-	return find_or_parse_type_constraint(@_) || role_type(@_);
+	my $tc = find_or_parse_type_constraint(@_);
+	return defined($tc) ? $tc : role_type(@_);
 }
 
 sub find_or_create_isa_type_constraint {
 	# XXX: Moose does not register a new class_type, but Mousse does.
-	return find_or_parse_type_constraint(@_) || class_type(@_);
+	my $tc = find_or_parse_type_constraint(@_);
+	return defined($tc) ? $tc : class_type(@_);
 }
 
 # Contents of Mouse
@@ -2078,7 +2120,7 @@ use 5.006_002;
 
 use Mousse::Exporter; # enables strict and warnings
 
-our $VERSION = '0.81';
+our $VERSION = '0.87';
 
 use Carp         qw(confess);
 use Scalar::Util qw(blessed);
@@ -3072,7 +3114,7 @@ sub _equal {
 package Mousse::Meta::Method::Accessor;
 use Mousse::Util qw(:meta); # enables strict and warnings
 
-use constant _MOUSE_DEBUG => !!$ENV{MOUSE_DEBUG};
+use constant _MOUSE_DEBUG => $ENV{MOUSE_DEBUG} ? 1 : 0;
 
 sub _inline_slot{
 	my(undef, $self_var, $attr_name) = @_;
@@ -3089,9 +3131,13 @@ sub _generate_accessor_any{
 	my $trigger       = $attribute->trigger;
 	my $is_weak       = $attribute->is_weak_ref;
 	my $should_deref  = $attribute->should_auto_deref;
-	my $should_coerce = (defined($constraint) && $constraint->has_coercion && $attribute->should_coerce);
+	my $should_coerce = (defined($constraint)
+							&& $constraint->has_coercion
+							&& $attribute->should_coerce);
 
-	my $compiled_type_constraint = defined($constraint) ? $constraint->_compiled_type_constraint : undef;
+	my $compiled_type_constraint = defined($constraint)
+		? $constraint->_compiled_type_constraint
+		: undef;
 
 	my $self  = '$_[0]';
 	my $slot  = $method_class->_inline_slot($self, $name);;
@@ -3101,15 +3147,15 @@ sub _generate_accessor_any{
 
 	if ($type eq 'rw' || $type eq 'wo') {
 		if($type eq 'rw'){
-			$accessor .= 
+			$accessor .=
 				'if (scalar(@_) >= 2) {' . "\n";
 		}
 		else{ # writer
-			$accessor .= 
+			$accessor .=
 				'if(@_ < 2){ Carp::confess("Not enough arguments for the writer of $name") }'.
 				'{' . "\n";
 		}
-				
+
 		my $value = '$_[1]';
 
 		if (defined $constraint) {
@@ -3119,7 +3165,7 @@ sub _generate_accessor_any{
 					'my $val = $constraint->coerce('.$value.');';
 				$value = '$val';
 			}
-			$accessor .= 
+			$accessor .=
 				"\n".
 				'$compiled_type_constraint->('.$value.') or
 					$attribute->_throw_type_constraint_error('.$value.', $constraint);' . "\n";
@@ -3249,7 +3295,7 @@ sub _generate_clearer {
 package Mousse::Meta::Method::Constructor;
 use Mousse::Util qw(:meta); # enables strict and warnings
 
-use constant _MOUSE_DEBUG => !!$ENV{MOUSE_DEBUG};
+use constant _MOUSE_DEBUG => $ENV{MOUSE_DEBUG} ? 1 : 0;
 
 sub _inline_slot{
 	my(undef, $self_var, $attr_name) = @_;
@@ -3530,7 +3576,7 @@ sub _generate_delegation{
 package Mousse::Meta::Method::Destructor;
 use Mousse::Util qw(:meta); # enables strict and warnings
 
-use constant _MOUSE_DEBUG => !!$ENV{MOUSE_DEBUG};
+use constant _MOUSE_DEBUG => $ENV{MOUSE_DEBUG} ? 1 : 0;
 
 sub _generate_destructor{
 	my (undef, $metaclass) = @_;
@@ -3603,12 +3649,6 @@ if(Mousse::Util::MOUSE_XS){
 	*CLONE = sub { Mousse::Util::__register_metaclass_storage(\%METAS, 1) };
 }
 
-sub _metaclass_cache { # DEPRECATED
-	my($self, $name) = @_;
-	Carp::cluck('_metaclass_cache() has been deprecated. Use Mousse::Util::get_metaclass_by_name() instead');
-	return $METAS{$name};
-}
-
 sub initialize {
 	my($class, $package_name, @args) = @_;
 
@@ -3641,7 +3681,8 @@ sub _class_of{
 }
 
 # Means of accessing all the metaclasses that have
-# been initialized thus far
+# been initialized thus far.
+# The public versions are aliased into Mousse::Util::*.
 #sub _get_all_metaclasses         {        %METAS         }
 sub _get_all_metaclass_instances { values %METAS         }
 sub _get_all_metaclass_names     { keys   %METAS         }
@@ -3722,7 +3763,7 @@ sub get_method_list {
 	return grep { $self->has_method($_) } keys %{ $self->namespace };
 }
 
-sub _collect_methods { # Mousse specific
+sub _collect_methods { # Mousse specific, used for method modifiers
 	my($meta, @args) = @_;
 
 	my @methods;
@@ -3808,6 +3849,7 @@ sub create {
 		$package_name = $class . '::__ANON__::' . $ANON_SERIAL;
 	}
 
+
 	# instantiate a module
 	{
 		no strict 'refs';
@@ -3851,7 +3893,7 @@ sub create {
 			$meta->add_method($method_name, $method_body);
 		}
 	}
-	if (defined $roles){
+	if (defined $roles and !$options{in_application_to_instance}){
 		Mousse::Util::apply_all_roles($package_name, @{$roles});
 	}
 
@@ -4079,7 +4121,10 @@ sub apply {
 		$consumer = (Mousse::Util::class_of($instance) || 'Mousse::Meta::Class')
 			->create_anon_class(
 				superclasses => [ref $instance],
+				roles        => [$role],
 				cache        => 1,
+
+				in_application_to_instance => 1, # suppress to apply roles
 			);
 	}
 
@@ -4395,7 +4440,7 @@ use Mousse::Util qw(does dump meta); # enables strict and warnings
 package Mousse::Role;
 use Mousse::Exporter; # enables strict and warnings
 
-our $VERSION = '0.81';
+our $VERSION = '0.87';
 
 use Carp         qw(confess);
 use Scalar::Util qw(blessed);
