@@ -5,5 +5,6 @@ name 'Foo';
 all_from 'lib/Foo.pm';
 
 use_mousse 'Foo::Mousse';
+use_mousse 'Foo::Bar::Baz::Mousse';
 
 # WriteAll;
