@@ -1,4 +1,5 @@
 use Test::More;
+use File::Path;
 
 BEGIN {
     @INC = grep { not /[\\\/]inc$/ } @INC;
@@ -7,11 +8,12 @@ BEGIN {
         return;
     };
 
+    File::Path::rmtree("t/lib/Foo/Bar");
     my $module_file = "t/lib/Foo/Mousse.pm";
     unlink($module_file) if -e $module_file;
     die if -e $module_file;
     system("(cd t; $^X Makefile.PL)");
-    plan tests => 1;
+    plan tests => 2;
 }
 
 use lib 't/lib';
@@ -23,3 +25,9 @@ my $f = Foo->new(
 );
 
 is $f->this, 'ok', 'Everything is OK';
+
+my $f2 = Foo::Bar->new(
+    that => 'ok',
+);
+
+is $f2->that, 'ok', 'Everything is OK';
