@@ -1,8 +1,14 @@
 ---
 version: 0.12
-date:    Fri Oct 29 09:45:28 PDT 2010
+date:    Sat Nov 13 19:45:13 PST 2010
 changes:
-- Build on Mouse-0.81
+- Build on Mouse-0.87
+- Fix bugs in using without Module::Install (with tests!)
+- Fixed bugs in Mousse::Maker
+- Documented Mousse::Maker
+- Removed overzealous Makefile.PL mousser
+- Renamed foo.t to meaningful name -> module-install.t
+
 ---
 version: 0.11
 date:    Tue Oct  5 23:05:23 PDT 2010
